--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -10,4 +10,5 @@
       <ion-title size="large">inicio</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-button clase="boton" routerLink="/datos">Datos</ion-button>
 </ion-content>
